syntax = "proto3";
package stream.v1;
option go_package = "github.com/rivalry-matchmaker/rivalry/pkg/pb/stream/v1";

message StreamTicket {
  // which matchmaking queue the match requests belong to
  string matchmaking_queue = 1;
  // the unique id of the match request
  string match_request_id = 2;
  // the number of players the match request represents
  int32 number_of_players = 3;
}

message AccumulatedStreamTicket {
  repeated StreamTicket StreamTickets = 1;
}